--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="app-component">
-    <div class="example">Hello world!</div>
+    <div class="hello">Hello world!</div>
+    <button type="button" class="example">Example</button>
 </div>
