--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,10 @@
 .app-component {
-  .example {
+  .hello {
     color: red;
+  }
+
+  .example {
+    color: white;
+    background-color: green;
   }
 }
