--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="app-component">
     <div class="hello">Hello world!</div>
-    <button type="button" class="example">Example</button>
+    <button id="example" type="button" class="example">Example</button>
 </div>
