--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="app-component">
-    <div class="hello">Hello world!</div>
-    <button id="example" type="button" class="example">Example</button>
+    <div class="hello-label">Hello world!</div>
+    <button id="app.color" type="button" class="color-button">Change color</button>
 </div>
