--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,10 @@
 .app-component {
-  .hello {
+  .hello-label {
     color: red;
   }
 
-  .example {
+  .color-button {
     color: white;
-    background-color: purple;
+    background-color: black;
   }
 }
