addition of sample bar-chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app-component">
     <div class="hello-label">Hello world!</div>
-    <button id="app.color" type="button" class="color-button">Change color</button>
+    <div id="app-barchart" class="bar-chart"></div>
+    <button id="app-change-color" type="button" class="color-button">Change color</button>
 </div>
