--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,4 +7,13 @@
     color: white;
     background-color: black;
   }
+
+  .bar-chart {
+    div {
+      display: inline-block;
+      background: #4285f4;
+      width: 20px;
+      margin-right: 3px;
+    }
+  }
 }
