addition of some components

--- a/src/app/bar-chart/bar-chart.scss
+++ b/src/app/bar-chart/bar-chart.scss
@@ -1,13 +1,4 @@
-.app-component {
-  .hello-label {
-    color: red;
-  }
-
-  .color-button {
-    color: white;
-    background-color: black;
-  }
-
+.bar-chart-component {
   .bar-chart {
     div {
       display: inline-block;
