--- a/src/app/transition-label/transition-label.scss
+++ b/src/app/transition-label/transition-label.scss
@@ -1,10 +1,10 @@
 .transition-label-component {
   .hello-label {
+    font-size: 4rem;
     color: red;
   }
 
   .color-button {
-    color: white;
-    background-color: black;
+    // do nothing
   }
 }
