--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -7,4 +7,7 @@
 @import "base";
 
 // Vendors
-// like bootstrap @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap";
+$fa-font-path: "./";
+
+@import "../../../node_modules/font-awesome/scss/font-awesome";
