--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -1,14 +1,14 @@
 // -------------------------------------------------------
 // App variables
 
-$primary-color: #00b233 !default;
-$accent-color: #fff !default;
-$secondary-color: #333 !default;
+$primary-color: #00b233;
+$accent-color: #fff;
+$secondary-color: #333;
 $info-color: #03a9f4;
 $success-color: #4caf50;
 $warning-color: #ff9800;
 $danger-color: #f44336;
-$gray-color: #666 !default;
+$gray-color: #666;
 
 // -------------------------------------------------------
 // Bootstrap variables
