styles defined in base.scss are now globally available

--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -27,3 +27,9 @@ $theme-colors: (
 
 //== Typography
 $font-size-base: 1rem;
+
+//== Navbar
+$navbar-padding-y: 1rem;
+
+// Forms
+$input-group-addon-bg: $primary-color;
